--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,19 @@
 body{
-    color: chocolate;
-    text-align: center;
+    color: #333;
+    text-align: left;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+#container{
+    width: 70%;
+    padding: 10px;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 10px auto;
+}
+#container h1{
+    font-size: 20px;
 }
