--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,13 +7,25 @@ body{
     padding: 0;
 }
 
+#cabecera{
+    background-color: darkcyan;
+    padding: 15px;
+    color: #ffffff;
+    font-size: 20px;
+    text-transform: uppercase;
+    text-align: center;
+}
+
 #container{
     width: 70%;
-    padding: 10px;
+    padding: 0px;
     text-align: left;
     border: 1px solid #DDD;
     margin: 10px auto;
 }
 #container h1{
     font-size: 20px;
+}
+#container__post{
+    padding: 15px;
 }
